[package]
name = "minikvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"], optional = true }
serde = { version = "1.0.197", features = ["rc", "derive"] }

[features]
default = ["key_value", "list", "map"]
key_value = []
list = []
map = []
chrono = ["dep:chrono"]